fixes for email subscription on mobile site

--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1828,7 +1828,7 @@ hr {
 	left: 30%;
 	bottom: 0;
 	right: 0;
-	z-index: 5;
+	z-index: 45;
 	width: 100px;
 	height: 100px;
 	border-radius: 50px;
@@ -1837,6 +1837,7 @@ hr {
 	text-transform: uppercase;
 	font-weight: bold;
 	padding: 20px;
+	display: none;
 }
 .mobile-subscription-ok span {
 	font-size: 18pt;
